@@ -10,37 +10,28 @@ TM2SGML = tmexpand
 SGML2HTML = sgml2html
 
 HLP_FILES = pngfuns.hlp pcrefuns.hlp sockfuns.hlp onigfuns.hlp \
-  randfuns.hlp forkfuns.hlp csvfuns.hlp
+  randfuns.hlp forkfuns.hlp csvfuns.hlp slsmg.hlp
 
 all: help-files
 help-files: $(HLP_FILES)
 html: modfuns.html
 
+.SUFFIXES: .tm .hlp
+.tm.hlp:
+	$(TMEXPAND) $(MACRODIR) -Mslhlp $< $@
 #----------------------------------------------------------------------------
 modfuns.sgml : modfuns.tm $(HLP_FILES)
 	$(TM2SGML) modfuns.tm modfuns.sgml
 modfuns.html : modfuns.sgml
 	$(SGML2HTML) modfuns.sgml
 #----------------------------------------------------------------------------
-pngfuns.hlp: pngfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp pngfuns.tm pngfuns.hlp
-pcrefuns.hlp: pcrefuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp pcrefuns.tm pcrefuns.hlp
-sockfuns.hlp: sockfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp sockfuns.tm sockfuns.hlp
-onigfuns.hlp: onigfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp onigfuns.tm onigfuns.hlp
-randfuns.hlp: randfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp randfuns.tm randfuns.hlp
-forkfuns.hlp: forkfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp forkfuns.tm forkfuns.hlp
-csvfuns.hlp: csvfuns.tm
-	$(TMEXPAND) $(MACRODIR) -Mslhlp csvfuns.tm csvfuns.hlp
-#----------------------------------------------------------------------------
 clean:
 	-rm -f *~ *.dvi *.log *.aux *.toc *.bak *.sgml
 distclean: clean
 	-rm -f *.html *.ps $(HLP_FILES)
-install: $(HLP_FILES) html
+install: install-help install-html
+install-help: $(HLP_FILES)
 	-mv $(HLP_FILES) ../help
+install-html: html
 	-mv *.html ../../doc/html/
+.PHONY: iclean distclean install install-help install-html
